--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
   <script type="text/babel">
     // const { Button } = MaterialUI; // Components are available in MaterialUI object
-    const { SignIn } = './SignIn'
+    // const { SignIn } = './SignIn'
     
-    ReactDOM.render(
-      // <Button variant="contained" color="primary">
-      //    Hello World!
-      // </Button>,
-      <SignIn/>,
-      document.getElementById("root") 
-    );
+    // ReactDOM.render(
+    //   // <Button variant="contained" color="primary">
+    //   //    Hello World!
+    //   // </Button>,
+    //   <SignIn/>,
+    //   document.getElementById("root") 
+    // );
   </script>
 </body>
