--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=">
+  <title>react test</title>
+</head>
 <body>
-  <div id="root"></div>
-
-  <!-- React -->
-  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-
-  <!-- Babel -->
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-
-  <!-- MUI -->
-  <script src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js"></script>
-
-  <script type="text/babel">
-    // const { Button } = MaterialUI; // Components are available in MaterialUI object
-    // const { SignIn } = './SignIn'
-    
-    // ReactDOM.render(
-    //   // <Button variant="contained" color="primary">
-    //   //    Hello World!
-    //   // </Button>,
-    //   <SignIn/>,
-    //   document.getElementById("root") 
-    // );
-  </script>
+  
+  <div id="root-react">React is loading...</div>
+  
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
+  
+  <script type="text/babel" src="./js/subcomponent.js"></script>
+  <script type="text/babel" src="./js/app.js"></script>
+  
 </body>
+</html>
